# AIchat

./: db.sqlite3-shm  pyproject.toml  requirements.txt
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_rename_bot_response_chatlog_bot_reply_and_more.py
blog/static/blog/: chatbot-widget.js  style.css
blog/templates/blog/: chat_iframe.html  history.html  index.html
config/: settings.py  urls.py
