[tool.poetry]
name = "aichat"
version = "0.1.0"
description = ""
authors = ["s1F102200132 <s1F102200132@iniad.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
